.antlr/VParser.java
// Generated from /Users/stanly/Project/Veridise/V/V.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class VParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LPAREN=1, RPAREN=2, LBRACK=3, RBRACK=4, COMMA=5, SENT=6, FSUM=7, WILDCARD=8, 
		DOT=9, SEQ=10, ASSN=11, LET=12, FOREACH=13, IN=14, IMPORT=15, VARS_LABEL=16, 
		PRECOND_LABEL=17, POSTCOND_LABEL=18, INIT_LABEL=19, SPEC_LABEL=20, SYNTH_LABEL=21, 
		LTLFAIR_LABEL=22, LTLPROP_LABEL=23, INV_LABEL=24, ATOM_PRE_LOC=25, ATOM_POST_LOC=26, 
		CONTRACT_INV=27, PRE_SEP=28, IMP=29, T_BIN=30, T_UN=31, PATH=32, IDENTIFIER=33, 
		A1_BIN=34, A2_BIN=35, A_UN=36, C_BIN=37, L_BIN=38, L_UN=39, NUM=40, NEG_NUM=41, 
		NEWLINE=42, WHITESPACE=43, LINE_COMMENT=44;
	public static final int
		RULE_spec = 0, RULE_behavioralSpec = 1, RULE_testSpec = 2, RULE_tempSpec = 3, 
		RULE_invariantSpec = 4, RULE_synthSpec = 5, RULE_imports = 6, RULE_varsSection = 7, 
		RULE_precondSection = 8, RULE_postcondSection = 9, RULE_initSection = 10, 
		RULE_specSection = 11, RULE_synthSection = 12, RULE_ltlFairnessSection = 13, 
		RULE_ltlPropertySection = 14, RULE_invariantSection = 15, RULE_seqAtom = 16, 
		RULE_declList = 17, RULE_typ = 18, RULE_smartltlAtom = 19, RULE_invAtom = 20, 
		RULE_atom = 21, RULE_atomFn = 22, RULE_atomFnName = 23, RULE_params = 24, 
		RULE_constraint = 25, RULE_boolExpr = 26, RULE_arithExpr = 27, RULE_fnCall = 28, 
		RULE_fnName = 29, RULE_argList = 30, RULE_ident = 31, RULE_varOrNum = 32, 
		RULE_num = 33, RULE_varAccess = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"spec", "behavioralSpec", "testSpec", "tempSpec", "invariantSpec", "synthSpec", 
			"imports", "varsSection", "precondSection", "postcondSection", "initSection", 
			"specSection", "synthSection", "ltlFairnessSection", "ltlPropertySection", 
			"invariantSection", "seqAtom", "declList", "typ", "smartltlAtom", "invAtom", 
			"atom", "atomFn", "atomFnName", "params", "constraint", "boolExpr", "arithExpr", 
			"fnCall", "fnName", "argList", "ident", "varOrNum", "num", "varAccess"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "','", "'sent'", "'fsum'", "'*'", "'.'", 
			"';'", "':='", "'let'", "'foreach'", "':'", "'import:'", null, null, 
			null, null, null, null, "'LTLFairness:'", "'LTLProperty:'", null, null, 
			null, "'Cinv'", "'|=>'", "'==>'", null, null, null, null, null, null, 
			"'-'", null, null, "'!'", null, null, null, "' '"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", "SENT", "FSUM", 
			"WILDCARD", "DOT", "SEQ", "ASSN", "LET", "FOREACH", "IN", "IMPORT", "VARS_LABEL", 
			"PRECOND_LABEL", "POSTCOND_LABEL", "INIT_LABEL", "SPEC_LABEL", "SYNTH_LABEL", 
			"LTLFAIR_LABEL", "LTLPROP_LABEL", "INV_LABEL", "ATOM_PRE_LOC", "ATOM_POST_LOC", 
			"CONTRACT_INV", "PRE_SEP", "IMP", "T_BIN", "T_UN", "PATH", "IDENTIFIER", 
			"A1_BIN", "A2_BIN", "A_UN", "C_BIN", "L_BIN", "L_UN", "NUM", "NEG_NUM", 
			"NEWLINE", "WHITESPACE", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "V.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public VParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SpecContext extends ParserRuleContext {
		public BehavioralSpecContext behavioralSpec() {
			return getRuleContext(BehavioralSpecContext.class,0);
		}
		public TerminalNode EOF() { return getToken(VParser.EOF, 0); }
		public TestSpecContext testSpec() {
			return getRuleContext(TestSpecContext.class,0);
		}
		public TempSpecContext tempSpec() {
			return getRuleContext(TempSpecContext.class,0);
		}
		public InvariantSpecContext invariantSpec() {
			return getRuleContext(InvariantSpecContext.class,0);
		}
		public SynthSpecContext synthSpec() {
			return getRuleContext(SynthSpecContext.class,0);
		}
		public SpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_spec; }
	}

	public final SpecContext spec() throws RecognitionException {
		SpecContext _localctx = new SpecContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_spec);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				behavioralSpec();
				setState(71);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				testSpec();
				setState(74);
				match(EOF);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				tempSpec();
				setState(77);
				match(EOF);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				invariantSpec();
				setState(80);
				match(EOF);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				synthSpec();
				setState(83);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BehavioralSpecContext extends ParserRuleContext {
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public PostcondSectionContext postcondSection() {
			return getRuleContext(PostcondSectionContext.class,0);
		}
		public VarsSectionContext varsSection() {
			return getRuleContext(VarsSectionContext.class,0);
		}
		public PrecondSectionContext precondSection() {
			return getRuleContext(PrecondSectionContext.class,0);
		}
		public BehavioralSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_behavioralSpec; }
	}

	public final BehavioralSpecContext behavioralSpec() throws RecognitionException {
		BehavioralSpecContext _localctx = new BehavioralSpecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_behavioralSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			imports();
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARS_LABEL) {
				{
				setState(88);
				varsSection();
				}
			}

			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PRECOND_LABEL) {
				{
				setState(91);
				precondSection();
				}
			}

			setState(94);
			postcondSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestSpecContext extends ParserRuleContext {
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public SpecSectionContext specSection() {
			return getRuleContext(SpecSectionContext.class,0);
		}
		public VarsSectionContext varsSection() {
			return getRuleContext(VarsSectionContext.class,0);
		}
		public InitSectionContext initSection() {
			return getRuleContext(InitSectionContext.class,0);
		}
		public TestSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_testSpec; }
	}

	public final TestSpecContext testSpec() throws RecognitionException {
		TestSpecContext _localctx = new TestSpecContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_testSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			imports();
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARS_LABEL) {
				{
				setState(97);
				varsSection();
				}
			}

			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INIT_LABEL) {
				{
				setState(100);
				initSection();
				}
			}

			setState(103);
			specSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TempSpecContext extends ParserRuleContext {
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public LtlPropertySectionContext ltlPropertySection() {
			return getRuleContext(LtlPropertySectionContext.class,0);
		}
		public VarsSectionContext varsSection() {
			return getRuleContext(VarsSectionContext.class,0);
		}
		public LtlFairnessSectionContext ltlFairnessSection() {
			return getRuleContext(LtlFairnessSectionContext.class,0);
		}
		public TempSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tempSpec; }
	}

	public final TempSpecContext tempSpec() throws RecognitionException {
		TempSpecContext _localctx = new TempSpecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_tempSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			imports();
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARS_LABEL) {
				{
				setState(106);
				varsSection();
				}
			}

			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LTLFAIR_LABEL) {
				{
				setState(109);
				ltlFairnessSection();
				}
			}

			setState(112);
			ltlPropertySection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InvariantSpecContext extends ParserRuleContext {
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public InvariantSectionContext invariantSection() {
			return getRuleContext(InvariantSectionContext.class,0);
		}
		public VarsSectionContext varsSection() {
			return getRuleContext(VarsSectionContext.class,0);
		}
		public InvariantSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_invariantSpec; }
	}

	public final InvariantSpecContext invariantSpec() throws RecognitionException {
		InvariantSpecContext _localctx = new InvariantSpecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_invariantSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			imports();
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARS_LABEL) {
				{
				setState(115);
				varsSection();
				}
			}

			setState(118);
			invariantSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SynthSpecContext extends ParserRuleContext {
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public SynthSectionContext synthSection() {
			return getRuleContext(SynthSectionContext.class,0);
		}
		public VarsSectionContext varsSection() {
			return getRuleContext(VarsSectionContext.class,0);
		}
		public InitSectionContext initSection() {
			return getRuleContext(InitSectionContext.class,0);
		}
		public SynthSpecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_synthSpec; }
	}

	public final SynthSpecContext synthSpec() throws RecognitionException {
		SynthSpecContext _localctx = new SynthSpecContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_synthSpec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			imports();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARS_LABEL) {
				{
				setState(121);
				varsSection();
				}
			}

			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INIT_LABEL) {
				{
				setState(124);
				initSection();
				}
			}

			setState(127);
			synthSection();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(VParser.IMPORT, 0); }
		public TerminalNode PATH() { return getToken(VParser.PATH, 0); }
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_imports);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				match(IMPORT);
				setState(130);
				match(PATH);
				setState(131);
				imports();
				}
				break;
			case VARS_LABEL:
			case PRECOND_LABEL:
			case POSTCOND_LABEL:
			case INIT_LABEL:
			case SPEC_LABEL:
			case SYNTH_LABEL:
			case LTLFAIR_LABEL:
			case LTLPROP_LABEL:
			case INV_LABEL:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarsSectionContext extends ParserRuleContext {
		public TerminalNode VARS_LABEL() { return getToken(VParser.VARS_LABEL, 0); }
		public DeclListContext declList() {
			return getRuleContext(DeclListContext.class,0);
		}
		public VarsSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varsSection; }
	}

	public final VarsSectionContext varsSection() throws RecognitionException {
		VarsSectionContext _localctx = new VarsSectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varsSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(VARS_LABEL);
			setState(136);
			declList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrecondSectionContext extends ParserRuleContext {
		public TerminalNode PRECOND_LABEL() { return getToken(VParser.PRECOND_LABEL, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public PrecondSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_precondSection; }
	}

	public final PrecondSectionContext precondSection() throws RecognitionException {
		PrecondSectionContext _localctx = new PrecondSectionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_precondSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(PRECOND_LABEL);
			setState(139);
			atom(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostcondSectionContext extends ParserRuleContext {
		public TerminalNode POSTCOND_LABEL() { return getToken(VParser.POSTCOND_LABEL, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public PostcondSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postcondSection; }
	}

	public final PostcondSectionContext postcondSection() throws RecognitionException {
		PostcondSectionContext _localctx = new PostcondSectionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_postcondSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(POSTCOND_LABEL);
			setState(142);
			atom(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitSectionContext extends ParserRuleContext {
		public TerminalNode INIT_LABEL() { return getToken(VParser.INIT_LABEL, 0); }
		public SeqAtomContext seqAtom() {
			return getRuleContext(SeqAtomContext.class,0);
		}
		public InitSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initSection; }
	}

	public final InitSectionContext initSection() throws RecognitionException {
		InitSectionContext _localctx = new InitSectionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_initSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(INIT_LABEL);
			setState(145);
			seqAtom();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecSectionContext extends ParserRuleContext {
		public TerminalNode SPEC_LABEL() { return getToken(VParser.SPEC_LABEL, 0); }
		public SeqAtomContext seqAtom() {
			return getRuleContext(SeqAtomContext.class,0);
		}
		public SpecSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specSection; }
	}

	public final SpecSectionContext specSection() throws RecognitionException {
		SpecSectionContext _localctx = new SpecSectionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_specSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(SPEC_LABEL);
			setState(148);
			seqAtom();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SynthSectionContext extends ParserRuleContext {
		public TerminalNode SYNTH_LABEL() { return getToken(VParser.SYNTH_LABEL, 0); }
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public SynthSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_synthSection; }
	}

	public final SynthSectionContext synthSection() throws RecognitionException {
		SynthSectionContext _localctx = new SynthSectionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_synthSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(SYNTH_LABEL);
			setState(151);
			atom(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LtlFairnessSectionContext extends ParserRuleContext {
		public TerminalNode LTLFAIR_LABEL() { return getToken(VParser.LTLFAIR_LABEL, 0); }
		public SmartltlAtomContext smartltlAtom() {
			return getRuleContext(SmartltlAtomContext.class,0);
		}
		public LtlFairnessSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ltlFairnessSection; }
	}

	public final LtlFairnessSectionContext ltlFairnessSection() throws RecognitionException {
		LtlFairnessSectionContext _localctx = new LtlFairnessSectionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_ltlFairnessSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(LTLFAIR_LABEL);
			setState(154);
			smartltlAtom(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LtlPropertySectionContext extends ParserRuleContext {
		public TerminalNode LTLPROP_LABEL() { return getToken(VParser.LTLPROP_LABEL, 0); }
		public SmartltlAtomContext smartltlAtom() {
			return getRuleContext(SmartltlAtomContext.class,0);
		}
		public LtlPropertySectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ltlPropertySection; }
	}

	public final LtlPropertySectionContext ltlPropertySection() throws RecognitionException {
		LtlPropertySectionContext _localctx = new LtlPropertySectionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_ltlPropertySection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			match(LTLPROP_LABEL);
			setState(157);
			smartltlAtom(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InvariantSectionContext extends ParserRuleContext {
		public TerminalNode INV_LABEL() { return getToken(VParser.INV_LABEL, 0); }
		public InvAtomContext invAtom() {
			return getRuleContext(InvAtomContext.class,0);
		}
		public InvariantSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_invariantSection; }
	}

	public final InvariantSectionContext invariantSection() throws RecognitionException {
		InvariantSectionContext _localctx = new InvariantSectionContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_invariantSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(INV_LABEL);
			setState(160);
			invAtom();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SeqAtomContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public TerminalNode SEQ() { return getToken(VParser.SEQ, 0); }
		public SeqAtomContext seqAtom() {
			return getRuleContext(SeqAtomContext.class,0);
		}
		public SeqAtomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seqAtom; }
	}
